2
SyntaxError: compile error
/home/heroku_rack/lib/console.rb:145: syntax error, unexpected '=', expecting $end
User.find :id =
               ^
